# LawyerChat

./: .gitignore  README.md  app.py  daily_update_hf.py  pyproject.toml  requirements.txt
.github/workflows/: daily_update.yml
chatbot/: app.py  chains.py  config.py  helpers.py  models.py
notebooks/: 01_historical.ipynb  02_recent.ipynb  03_explore_database.ipynb  04_semantic_search.ipynb  05_rag_with_claude.ipynb
scripts/: daily_update_hf.py
sec_risk_factors/: pipeline.py  sec_client.py  store.py
src/sec_risk/: __init__.py  artifacts.py  extractors.py  rag_query.py
