[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sec-risk"
version = "0.1.0"
description = "SEC 10-K Item 1A Risk Factors ingestion + Chroma index"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
  "pandas>=2.0",
  "chromadb>=1.0.20,<2.0",
  "langchain-chroma>=0.2,<0.3", 
  "langchain>=0.3,<0.4",
  "langchain-community>=0.3,<0.4",
  "langchain-text-splitters>=0.3,<0.4",
  "langchain-core>=0.3,<0.4",
  "langchain-huggingface>=0.1,<0.2",
  "sentence-transformers>=3.1,<3.2",
]

[tool.setuptools]
package-dir = {"" = "src"}
